Added register form

--- a/user-management-app-ui/src/app/components/header/header.component.html
+++ b/user-management-app-ui/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="mat-elevation-z10" color="primary" fxLayout="row">
   <span>User Management App</span>
   <span class="example-spacer"></span>
   <button [routerLink]="'login'" mat-icon-button class="" aria-label="Login icon">
