--- a/user-management-app-ui/src/app/components/login/login.component.html
+++ b/user-management-app-ui/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<mat-card class="my-card">
-  <mat-card-title>Login Page</mat-card-title>
+<mat-card class="mat-elevation-z0 outline">
+  <mat-card-title>Login Form</mat-card-title>
   <mat-card-content>
     <form [formGroup]="loginForm" (ngSubmit)="submitForm()" novalidate>
 
@@ -19,6 +19,6 @@
 </mat-card>
 <br/>
 
-<mat-card>If you don't have an account,
-  <a href="register">you can register here.</a>
+<mat-card class="mat-elevation-z0 outline">If you don't have an account, you can register
+  <a href="register"> here.</a>
 </mat-card>
