--- a/user-management-app-ui/src/app/components/register/register.component.html
+++ b/user-management-app-ui/src/app/components/register/register.component.html
@@ -1,1 +1,43 @@
-<p>register works!</p>
+<mat-card class="mat-elevation-z0 outline">
+  <mat-card-title>Register Form</mat-card-title>
+  <mat-card-content>
+    <form [formGroup]="registerForm" (ngSubmit)="submitForm()" novalidate>
+
+      <mat-form-field class="example-full-width">
+        <input matInput type="text" placeholder="First Name" formControlName="firstName" required>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <input matInput type="text" placeholder="Last Name" formControlName="lastName" required>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <input matInput type="text" placeholder="Username" formControlName="username" required>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <input matInput type="password" placeholder="Password" formControlName="password" required>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <input matInput type="password" placeholder="Repeat Password" formControlName="repeatPassword" required>
+      </mat-form-field>
+
+      <mat-error *ngIf="registerForm.controls['username'].errors?.usernameExists">
+        This username already exists.
+      </mat-error>
+
+      <mat-error *ngIf="registerForm.hasError('passwordsDoNotMatch')">
+        The passwords do not match.
+      </mat-error>
+
+      <div class="button-wrapper">
+        <button mat-flat-button color="primary" [disabled]="registerForm.invalid">Register</button>
+      </div>
+    </form>
+  </mat-card-content>
+</mat-card>
+
+<mat-card class="mat-elevation-z0 outline last-element">If you already have an account, you can login
+  <a href="login"> here.</a>
+</mat-card>
