--- a/user-management-app-ui/src/styles.scss
+++ b/user-management-app-ui/src/styles.scss
@@ -15,6 +15,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  margin: auto;
 }
 
 form {
@@ -45,3 +46,38 @@ form {
 .button-wrapper {
   margin-top: 10px;
 }
+
+a:hover, a:active {
+  color: lightgray;
+}
+
+.menu-items {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+mat-toolbar {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0px;
+  z-index: 999;
+}
+
+mat-card {
+  width: 80vw;
+  text-align: center;
+  margin: 0 auto;
+  top: 10vh;
+  margin-bottom: 5vh !important;
+}
+
+.outline {
+  color: #1e5792;
+  border-left: 14px solid #1e5792 !important;
+  border-radius: 6px;
+  border-color: #ececec;
+  border-right: 1px solid #ececec;
+}
+
+
