--- a/user-management-app-ui/src/app/components/header/header.component.html
+++ b/user-management-app-ui/src/app/components/header/header.component.html
@@ -1,7 +1,10 @@
 <mat-toolbar class="mat-elevation-z10" color="primary" fxLayout="row">
   <span>User Management App</span>
   <span class="example-spacer"></span>
-  <button [routerLink]="'login'" mat-icon-button class="" aria-label="Login icon">
+  <button [routerLink]="'login'" *ngIf="!isLoggedIn" aria-label="Login icon" class="" mat-icon-button>
     <mat-icon>login</mat-icon>
+  </button>
+  <button (click)="logout()" *ngIf="isLoggedIn" aria-label="Logout icon" class="" mat-icon-button>
+    <mat-icon>logout</mat-icon>
   </button>
 </mat-toolbar>
