--- a/user-management-app-ui/src/app/components/login/login.component.html
+++ b/user-management-app-ui/src/app/components/login/login.component.html
@@ -1,18 +1,18 @@
 <mat-card class="mat-elevation-z0 outline">
   <mat-card-title>Login Form</mat-card-title>
   <mat-card-content>
-    <form [formGroup]="loginForm" (ngSubmit)="submitForm()" novalidate>
+    <form (ngSubmit)="submitForm()" [formGroup]="loginForm" novalidate>
 
       <mat-form-field class="example-full-width">
-        <input matInput type="text" placeholder="Username" formControlName="username" required>
+        <input formControlName="username" matInput placeholder="Username" required type="text">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <input matInput type="password" placeholder="Password" formControlName="password" required>
+        <input formControlName="password" matInput placeholder="Password" required type="password">
       </mat-form-field>
 
       <div class="button-wrapper">
-        <button mat-flat-button color="primary" [disabled]="loginForm.invalid">Login</button>
+        <button [disabled]="loginForm.invalid" color="primary" mat-flat-button>Login</button>
       </div>
     </form>
   </mat-card-content>
