--- a/user-management-app-ui/src/app/components/register/register.component.html
+++ b/user-management-app-ui/src/app/components/register/register.component.html
@@ -1,26 +1,26 @@
 <mat-card class="mat-elevation-z0 outline">
   <mat-card-title>Register Form</mat-card-title>
   <mat-card-content>
-    <form [formGroup]="registerForm" (ngSubmit)="submitForm()" novalidate>
+    <form (ngSubmit)="submitForm()" [formGroup]="registerForm" novalidate>
 
       <mat-form-field class="example-full-width">
-        <input matInput type="text" placeholder="First Name" formControlName="firstName" required>
+        <input formControlName="firstName" matInput placeholder="First Name" required type="text">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <input matInput type="text" placeholder="Last Name" formControlName="lastName" required>
+        <input formControlName="lastName" matInput placeholder="Last Name" required type="text">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <input matInput type="text" placeholder="Username" formControlName="username" required>
+        <input formControlName="username" matInput placeholder="Username" required type="text">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <input matInput type="password" placeholder="Password" formControlName="password" required>
+        <input formControlName="password" matInput placeholder="Password" required type="password">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <input matInput type="password" placeholder="Repeat Password" formControlName="repeatPassword" required>
+        <input formControlName="repeatPassword" matInput placeholder="Repeat Password" required type="password">
       </mat-form-field>
 
       <mat-error *ngIf="registerForm.controls['username'].errors?.usernameExists">
@@ -32,7 +32,7 @@
       </mat-error>
 
       <div class="button-wrapper">
-        <button mat-flat-button color="primary" [disabled]="registerForm.invalid">Register</button>
+        <button [disabled]="registerForm.invalid" color="primary" mat-flat-button>Register</button>
       </div>
     </form>
   </mat-card-content>
