--- a/user-management-app-ui/src/app/components/profile/profile.component.html
+++ b/user-management-app-ui/src/app/components/profile/profile.component.html
@@ -1,1 +1,25 @@
-<p>profile works!</p>
+<mat-card class="mat-elevation-z0 outline">
+  <mat-card-title>Profile Information</mat-card-title>
+  <mat-card-content>
+    <form [formGroup]="userForm" novalidate>
+
+      <mat-form-field class="example-full-width">
+        <input formControlName="firstName" matInput placeholder="First Name" type="text" [readonly]="true">
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <input formControlName="lastName" matInput placeholder="Last Name" type="text" [readonly]="true">
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <input formControlName="username" matInput placeholder="Username" type="text" [readonly]="true">
+      </mat-form-field>
+
+    </form>
+  </mat-card-content>
+</mat-card>
+
+<mat-card class="mat-elevation-z0 outline last-element">Editing functionality is coming soon.
+</mat-card>
+
+
